Added reame & getting progress
